modifications on chapter I

--- a/Notebook_Chapter_I_FoodWebs/Chapter_I_FoodWebs_Notebook.ipynb
+++ b/Notebook_Chapter_I_FoodWebs/Chapter_I_FoodWebs_Notebook.ipynb
@@ -1028,7 +1028,7 @@
     "    next_line_fields=next_line[:-2].split(' ')\n",
     "    node_a=next_line_fields[1] #there is a space in the beginning of each edge\n",
     "    node_b=next_line_fields[2]\n",
-    "    print node_a, node_b\n",
+    "    # print node_a, node_b\n",
     "    DG.add_edge(node_a, node_b)\n",
     "\n",
     "#deleting the environment\n",
